--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 ADMIN_PASSWORD=mia-admin
 ADMIN_SECRET=change-this-secret
 NEXT_PUBLIC_SITE_URL=http://localhost:3000
+NEXT_PUBLIC_YANDEX_MAPS_API_KEY=your-yandex-maps-api-key
