Implement secure order flow and Supabase Prisma migration

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,8 @@ ADMIN_PASSWORD=mia-admin
 ADMIN_SECRET=change-this-secret
 NEXT_PUBLIC_SITE_URL=http://localhost:3000
 NEXT_PUBLIC_YANDEX_MAPS_API_KEY=your-yandex-maps-api-key
+NEXT_PUBLIC_DEV_ADMIN_PASSWORD=mia-admin
+DATA_SOURCE=json
+DUAL_WRITE=false
+DATABASE_URL=postgresql://USER:PASSWORD@HOST:5432/DB?pgbouncer=true&connection_limit=1
+DIRECT_URL=postgresql://USER:PASSWORD@HOST:5432/DB
