--- a/package.json
+++ b/package.json
@@ -8,16 +8,24 @@
     "start": "next start",
     "lint": "next lint",
     "typecheck": "tsc --noEmit",
-    "images:localize": "node scripts/localize-twinset-images.mjs"
+    "images:localize": "node scripts/localize-twinset-images.mjs",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "db:generate": "prisma generate",
+    "db:migrate": "prisma migrate dev",
+    "db:migrate:deploy": "prisma migrate deploy",
+    "db:seed": "prisma db seed"
   },
   "dependencies": {
     "@fontsource/montserrat": "^5.2.8",
+    "@prisma/client": "^6.19.2",
     "clsx": "^2.1.1",
     "framer-motion": "^11.11.10",
     "lucide-react": "^0.468.0",
     "next": "^14.2.24",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@types/node": "^22.10.2",
@@ -27,7 +35,13 @@
     "eslint": "^8.57.1",
     "eslint-config-next": "^14.2.24",
     "postcss": "^8.4.49",
+    "prisma": "^6.19.2",
     "tailwindcss": "^3.4.16",
-    "typescript": "^5.7.2"
+    "tsx": "^4.21.0",
+    "typescript": "^5.7.2",
+    "vitest": "^3.2.4"
+  },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
   }
 }
