--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,13 @@ ADMIN_SECRET=change-this-secret
 NEXT_PUBLIC_SITE_URL=http://localhost:3000
 NEXT_PUBLIC_YANDEX_MAPS_API_KEY=your-yandex-maps-api-key
 NEXT_PUBLIC_DEV_ADMIN_PASSWORD=mia-admin
-DATA_SOURCE=db
+
+# Data source mode:
+# - json: store data in src/data/*.json (best for local MVP)
+# - db: use Postgres via Prisma (recommended for production/Vercel)
+DATA_SOURCE=json
 DUAL_WRITE=false
-DATABASE_URL=postgresql://USER:PASSWORD@HOST:5432/DB?pgbouncer=true&connection_limit=1
-DIRECT_URL=postgresql://USER:PASSWORD@HOST:5432/DB
+
+# DB mode (uncomment and set real values if you want to use Postgres):
+# DATABASE_URL=postgresql://USER:PASSWORD@HOST:5432/DB?pgbouncer=true&connection_limit=1
+# DIRECT_URL=postgresql://USER:PASSWORD@HOST:5432/DB
